This commit changes the mode code for the 'configuration-files.kubelet-exec-start-conf' setting in the kubernetes-services.toml file from its previous value to 0644.
The migration files have been updated accordingly to reflect this mode change for the
kubelet-exec-start.conf configuration file.

--- a/Release.toml
+++ b/Release.toml
@@ -343,4 +343,5 @@ version = "1.22.0"
     "migrate_v1.22.0_public-control-container-v0-7-15.lz4",
     "migrate_v1.22.0_bootstrap-commands-settings.lz4",
     "migrate_v1.22.0_bootstrap-commands-metadata.lz4",
+    "migrate_v1.22.0_kubernetes-service-config.lz4",
 ]
