This commit changes the mode code for the 'configuration-files.kubelet-exec-start-conf' setting in the kubernetes-services.toml file from its previous value to 0644.
The migration files have been updated accordingly to reflect this mode change for the
kubelet-exec-start.conf configuration file.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -51,6 +51,7 @@ members = [
     "settings-migrations/v1.22.0/public-control-container-v0-7-15",
     "settings-migrations/v1.22.0/bootstrap-commands-settings",
     "settings-migrations/v1.22.0/bootstrap-commands-metadata",
+    "settings-migrations/v1.23.0/kubernetes-service-config",
 
     "settings-plugins/aws-dev",
     "settings-plugins/aws-ecs-1",
