--- a/sources/models/Cargo.toml
+++ b/sources/models/Cargo.toml
@@ -14,6 +14,7 @@ bottlerocket-release.workspace = true
 libc.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
+serde_plain.workspace = true
 toml.workspace = true
 
 # settings plugins
