--- a/Release.toml
+++ b/Release.toml
@@ -395,4 +395,6 @@ version = "1.33.0"
     "migrate_v1.31.0_public-control-container-v0-7-20.lz4",
 ]
 "(1.31.0, 1.32.0)" = []
-"(1.32.0, 1.33.0)" = []
+"(1.32.0, 1.33.0)" = [
+    "migrate_v1.33.0_aws-remove-schnauzer-admin.lz4",
+]
