--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -83,6 +83,7 @@ members = [
     "settings-migrations/v1.31.0/public-admin-container-v0-11-16",
     "settings-migrations/v1.31.0/aws-control-container-v0-7-20",
     "settings-migrations/v1.31.0/public-control-container-v0-7-20",
+    "settings-migrations/v1.33.0/aws-remove-schnauzer-admin",
 
     "settings-plugins/aws-dev",
     "settings-plugins/aws-ecs-1",
