--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -84,6 +84,7 @@ members = [
     "settings-migrations/v1.31.0/aws-control-container-v0-7-20",
     "settings-migrations/v1.31.0/public-control-container-v0-7-20",
     "settings-migrations/v1.33.0/aws-remove-schnauzer-admin",
+    "settings-migrations/v1.33.0/aws-remove-schnauzer-control",
 
     "settings-plugins/aws-dev",
     "settings-plugins/aws-ecs-1",
