--- a/Release.toml
+++ b/Release.toml
@@ -398,4 +398,5 @@ version = "1.33.0"
 "(1.32.0, 1.33.0)" = [
     "migrate_v1.33.0_aws-remove-schnauzer-admin.lz4",
     "migrate_v1.33.0_aws-remove-schnauzer-control.lz4",
+    "migrate_v1.33.0_public-remove-source-admin.lz4",
 ]
