migrations: remove metadata and data public control
In this migration we will remove the data if it matches
with existing ones in datastore. We will rely on
Storewolf and Sundog to populate correct data.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -86,6 +86,7 @@ members = [
     "settings-migrations/v1.33.0/aws-remove-schnauzer-admin",
     "settings-migrations/v1.33.0/aws-remove-schnauzer-control",
     "settings-migrations/v1.33.0/public-remove-source-admin",
+    "settings-migrations/v1.33.0/public-remove-source-control",
 
     "settings-plugins/aws-dev",
     "settings-plugins/aws-ecs-1",
