--- a/sources/shared-defaults/nvidia-k8s-device-plugin.toml
+++ b/sources/shared-defaults/nvidia-k8s-device-plugin.toml
@@ -4,6 +4,7 @@ restart-commands = ["/bin/systemctl try-reload-or-restart nvidia-k8s-device-plug
 configuration-files = [
     "nvidia-k8s-device-plugin-conf",
     "nvidia-k8s-device-plugin-exec-start-conf",
+    "nvidia-k8s-device-plugin-mig-conf"
 ]
 
 [configuration-files.nvidia-k8s-device-plugin-conf]
@@ -14,6 +15,10 @@ template-path = "/usr/share/templates/nvidia-k8s-device-plugin-conf"
 path = "/etc/systemd/system/nvidia-k8s-device-plugin.service.d/exec-start.conf"
 template-path = "/usr/share/templates/nvidia-k8s-device-plugin-exec-start-conf"
 
+[configuration-files.nvidia-k8s-device-plugin-mig-conf]
+path = "/etc/nvidia-migmanager/nvidia-migmanager.toml"
+template-path = "/usr/share/templates/nvidia-k8s-device-plugin-mig-conf"
+
 [metadata.settings.kubelet-device-plugins.nvidia]
 affected-services = ["nvidia-k8s-device-plugin"]
 
@@ -22,3 +27,4 @@ pass-device-specs = true
 device-id-strategy="index"
 device-list-strategy="volume-mounts"
 device-sharing-strategy="none"
+device-partitioning-strategy="none"
